--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bookshelf-imageclip",
-  "version": "0.3.3",
+  "version": "0.4.1-rc1",
   "description": "Image attachments with Bookshelf.js",
   "main": "src/imageclip.js",
   "scripts": {
